# Proyecto-deteccion-patentes

./: .gitignore  README.md  pyproject.toml
proyecto-deteccion-patentes/: main.py  output.csv  time_helpers.py
proyecto-deteccion-patentes/utils/: cut_video.py  draw_square.py
